add statsplugin example

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "go-webpack-example",
+  "name": "go-webpack-example-statsplugin",
   "version": "0.0.1",
   "license": "MIT",
   "private": true,
@@ -24,11 +24,11 @@
     "postcss-functions": "^3.0.0",
     "postcss-loader": "^2.1.0",
     "sass-loader": "^6.0.0",
+    "stats-webpack-plugin": "^0.5.0",
     "style-loader": "^0.20.1",
     "url-loader": "^0.6.2",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.3.0",
-    "webpack-hot-middleware": "^2.7.1",
-    "webpack-manifest-plugin": "^1.3.2"
+    "webpack-hot-middleware": "^2.7.1"
   }
 }
