--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
     "webpack-dev-server": "^2.3.0",
     "webpack-hot-middleware": "^2.7.1",
     "webpack-manifest-plugin": "^1.3.2"
+  },
+  "scripts": {
+    "build": "webpack --config config/webpack.config.js",
+    "start": "webpack-dev-server --config webpack.config.js --hot --inline"
   }
 }
