--- a/package.json
+++ b/package.json
@@ -5,34 +5,33 @@
   "private": true,
   "repository": "",
   "dependencies": {
-    "autoprefixer": "^7.2.5",
-    "babel-cli": "^6.18.0",
-    "babel-core": "^6.18.2",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-lodash": "^3.2.9",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-stage-0": "^6.16.0",
-    "babel-runtime": "^6.20.0",
-    "compression-webpack-plugin": "^1.1.6",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-function-bind": "^7.0.0",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "autoprefixer": "^9.3.1",
+    "babel-loader": "^8.0.2",
+    "compression-webpack-plugin": "^2.0.0",
     "css-hot-loader": "^1.3.6",
-    "css-loader": "^0.28.9",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.6",
+    "css-loader": "^1.0.1",
+    "extract-css-chunks-webpack-plugin": "^3.2.1",
+    "file-loader": "^2.0.0",
     "html-loader": "^0.5.5",
     "node-sass": "^4.0.0",
     "postcss-functions": "^3.0.0",
-    "postcss-loader": "^2.1.0",
-    "sass-loader": "^6.0.0",
-    "style-loader": "^0.20.1",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.3.0",
-    "webpack-hot-middleware": "^2.7.1",
-    "webpack-manifest-plugin": "^1.3.2"
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.25.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10",
+    "webpack-manifest-plugin": "^2.0.4"
   },
   "scripts": {
     "build": "webpack --config config/webpack.config.js",
-    "start": "webpack-dev-server --config webpack.config.js --hot --inline"
+    "start": "webpack-dev-server --config config/webpack.config.js --hot --inline"
   }
 }
