--- a/.babelrc
+++ b/.babelrc
@@ -3,9 +3,12 @@
    "targets": {
     "browsers": ["last 2 versions", "ie >= 11"]
     },
+    "corejs": 3,
     "useBuiltIns": "entry"
   }], "@babel/react"],
  "plugins": [
+    ["@babel/plugin-transform-react-jsx", { "pragma":"h" }],
+
     // Stage 0
     "@babel/plugin-proposal-function-bind",
 
@@ -25,9 +28,12 @@
     //"@babel/plugin-proposal-throw-expressions",
 
     // Stage 3
-    //"@babel/plugin-syntax-dynamic-import",
+    "@babel/plugin-syntax-dynamic-import",
     //"@babel/plugin-syntax-import-meta",
     ["@babel/plugin-proposal-class-properties", { "loose": false }],
     //"@babel/plugin-proposal-json-strings"
+
+    // ETC
+    "@babel/plugin-transform-runtime"
   ]
 }
